// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`authModal is rendered when hasModal is true 1`] = `
<aside
  className="root"
>
  <header
    className="header"
  >
    <i />
  </header>
  <div
    className="body_masked"
  >
    <i />
  </div>
  <div
    className="footer"
  >
    <div
      className="switchers"
    >
      StoreSwitcher
      CurrencySwitcher
    </div>
    <i />
  </div>
  <div
    className="modal_open"
  >
    <require('../AuthModal')
      view="MENU"
    />
  </div>
</aside>
`;

exports[`renders correctly when closed 1`] = `
<aside
  className="root"
>
  <header
    className="header"
  >
    <i />
  </header>
  <div
    className="body"
  >
    <i />
  </div>
  <div
    className="footer"
  >
    <div
      className="switchers"
    >
      StoreSwitcher
      CurrencySwitcher
    </div>
    <i />
  </div>
  <div
    className="modal"
  />
</aside>
`;

exports[`renders correctly when open 1`] = `
<aside
  className="root_open"
>
  <header
    className="header"
  >
    <i />
  </header>
  <div
    className="body"
  >
    <i />
  </div>
  <div
    className="footer"
  >
    <div
      className="switchers"
    >
      StoreSwitcher
      CurrencySwitcher
    </div>
    <i />
  </div>
  <div
    className="modal"
  />
</aside>
`;
